--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "pvp-game-tests",
   "version": "1.0.0",
@@ -20,5 +19,8 @@
     "vite": "^5.1.4",
     "vitest": "^1.3.1",
     "vitest-environment-clarinet": "^2.0.0"
+  },
+  "devDependencies": {
+    "@hirosystems/clarinet-sdk-wasm": "^2.12.0"
   }
 }
